samples/_failures_safe/1761374352_9713fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8377684.c: In function ‘main’:
./samples/SAFE/__tmp_e8377684.c:171:12: error: missing terminating " character
  171 |     printf("Enter arithmetic expressions (empty line to
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e8377684.c:171:5: error: expected expression at end of input
  171 |     printf("Enter arithmetic expressions (empty line to
      |     ^~~~~~
./samples/SAFE/__tmp_e8377684.c:171:5: error: expected declaration or statement at end of input
